Spiral PDF Generator - Final Version: cleaned up the source code and improved the makefile.

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -1,19 +1,21 @@
 CC = g++
 CFLAGS = -Wall
-LIBHARU = ../libharu/src
-INCLUDE = ../libharu/include
+LIBHARU = ./libharu
 
 spiralPDF: spiralPDF.o Spiral.o HaruPDF.o
-	$(CC) $(CFLAGS) -o spiralPDF spiralPDF.o Spiral.o HaruPDF.o -L$(LIBHARU) -lhpdfs
+	$(CC) $(CFLAGS) -I$(LIBHARU)/include -o spiralPDF spiralPDF.o Spiral.o HaruPDF.o -L$(LIBHARU)/src -lhpdfs
 
 Spiral.o: Spiral.cpp Spiral.h 
 	$(CC) $(CFLAGS) -c Spiral.cpp
 
 HaruPDF.o: HaruPDF.cpp HaruPDF.h 
-	$(CC) $(CFLAGS) -I$(INCLUDE) -c HaruPDF.cpp
+	$(CC) $(CFLAGS) -I$(LIBHARU)/include -c HaruPDF.cpp
 
 spiralPDF.o: spiralPDF.cpp
-	$(CC) $(CFLAGS) -I$(INCLUDE) -c spiralPDF.cpp 
+	$(CC) $(CFLAGS) -I$(LIBHARU)/include -c spiralPDF.cpp 
+
+test: spiralPDF
+	./spiralPDF "No other person is responsible for your success and happiness. Do your sanity a favor and embrace yourself."
 
 clean: 
 	Irm -f *.o spiralPDF
